# odoo-devkit

./: .flake8  .gitignore  .mypy.ini  .odoo_ignore  .pre-commit-config.yaml  .pylintrc-odoo  Dockerfile  GITHUB_RELEASE_INSTRUCTIONS.md  Makefile  NEXT_STEPS_SUMMARY.md  README-Odoo18-Enhancements.md  README.md  RELEASE_NOTES.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  docker-env-template  pyproject.toml  pytest-basic.ini  pytest.ini  requirements.txt
custom_modules/: __init__.py
custom_modules/example_module/: __manifest__.py
custom_modules/example_module/controllers/: __init__.py  (+1 more)
custom_modules/royal_textiles_sales/: __init__.py  __manifest__.py
docker/pgadmin/: servers.json
docs/: DEPLOYMENT_SUCCESS_SUMMARY.md  ODOO_18_LESSONS_LEARNED.md  ROYAL_TEXTILES_DEMO_DATA_ANALYSIS.md  SCALABLE_DEPLOYMENT_PROCESS.md  VALIDATION_FAILURE_ROOT_CAUSE_ANALYSIS.md  VALIDATION_KNOWLEDGE_BASE.md  base-test-classes-guide.md  coverage-guide.md  database-management.md  development_guide.md  docker-alternative-setup.md  import-validation-summary.md  integration-tests-guide.md  linting-test-results.md  local-odoo-setup.md  manifest-validation-summary.md  module-testing-automation.md  odoo-configuration-management.md  performance-testing-guide.md  postgresql-setup.md  pytest-odoo-testing-guide.md  royal-textiles-testing-guide.md  security-validation-summary.md  test-fixtures-guide.md  testing-guide.md  vscode-debugging-guide.md  vscode-snippets-guide.md  vscode-tasks-guide.md  vscode-workspace-guide.md  xml-validation-summary.md
local-odoo/: requirements.txt  start-odoo-debug.sh
reports/: flake8.json  flake8.txt  pylint.json  pylint.txt  security.txt  validation.txt  xml-validation.txt
reports/mypy/: index.txt  index.xml
scripts/: README.md  bulletproof-validation.py  comprehensive-field-validator.py  configure-odoo.sh  create-data-generators.sh  db-backup.sh  db-manager.sh  db-test-manager.sh  debugpy-config.py  dependency-security-scanner.sh  deployment-readiness-checklist.sh  docker-manager.sh  fix-code-quality.py  fix-demo-naming.py  fix-xml-wrappers.py  format-xml.py  generate-module-documentation.sh  generate-test-reports.sh  install-local-odoo.sh  odoo-dynamic-validation.py  odoo-terminal-helper.sh  odoo-type-checker.py  odoo18-comprehensive-validation.py  pre-deployment-validation.py  run-pre-push-checks.sh  run-tests.sh  setup-debugpy.sh  setup-dev-environment.sh  setup-git-hooks.sh  setup-postgresql.sh  setup-pytest-odoo.sh  simulate-odoo-sh-deployment.sh  test-coverage-setup.py  test-module-installation.sh  validate-demo-data.py  validate-imports.py  validate-manifest.py  validate-module.py  validate-odoo-18-compatibility.py  validate-odoo18-critical-issues.py  (+2 more)
templates/: demo_data_template.xml  github-actions-workflow.yml  pre-push-hook.sh
tests/: base_controller_test.py  base_model_test.py  base_view_test.py  test_coverage_demo.py
tests/fixtures/: __init__.py  factories.py  maintenance.py  realistic_data.py  scenarios.py
tests/functional/: test_example_functional.py
tests/integration/: __init__.py  test_complete_business_flow.py  test_customer_lifecycle.py  test_example_integration.py  test_installation_workflow.py  test_reporting_workflow.py  test_sales_order_workflow.py
tests/performance/: __init__.py  base_performance_test.py  test_database_performance.py  test_example_performance.py  test_memory_performance.py  test_view_performance.py
tests/unit/: test_example_model.py  test_example_unit.py
(+33 files in other folders)
